<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_subscription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subscribe_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="24dp"
        android:text="@string/sub_to_weather"
        android:padding="8dp"
        android:elevation="2dp"
        android:background="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/unsubscribe_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_weather"
        android:layout_marginTop="24dp"
        android:text="@string/unsub_to_weather"
        android:padding="8dp"
        android:elevation="2dp"
        android:background="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sub_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unsubscribe_weather"
        android:layout_marginTop="24dp"
        android:text="@string/sub_to_news"
        android:padding="8dp"
        android:elevation="2dp"
        android:background="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/unsub_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_news"
        android:layout_marginTop="24dp"
        android:text="@string/unsub_to_news"
        android:padding="8dp"
        android:elevation="2dp"
        android:background="@color/colorAccent" />


</androidx.constraintlayout.widget.ConstraintLayout>